feat: add user role changes and impersonation
